# SwiftNetPP

./: CMakeLists.txt  LICENSE  Makefile  README.md
include/snpp/: Core.h  Version.h
include/snpp/ai/: AIProtection.h
include/snpp/net/: Client.h  Endpoint.h  Host.h  Peer.h
include/snpp/utils/: Allocator.h
src/: CMakeLists.txt
src/ai/: AIProtection.c
src/net/: Client.c  Endpoint.c  Host.c  Peer.c
src/utils/: Allocator.c
